log/build_2025-06-13_16-45-50/image_converter/stderr.log
  File "/home/serch/xarm_ws/install/image_converter/lib/python3.10/site-packages/image_converter/rgbd_to_pc.py", line 292
    main()y
          ^
SyntaxError: invalid syntax

